--- a/Import_data_cleaning.ipynb
+++ b/Import_data_cleaning.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7uh1pxGTrXuU",
-        "outputId": "7a97ca15-b7dd-4e65-913d-c5e147134adf"
+        "outputId": "8f7d67b4-4634-449d-f2f3-20a09b37f42b"
       },
       "outputs": [
         {
@@ -81,13 +81,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "n5aJ40_TPE5r",
-        "outputId": "9d5ed77a-f7bf-4795-cb27-3d7f1cd1e954"
+        "outputId": "83b764d9-fb36-43d7-99eb-e8742e6218da"
       },
       "outputs": [
         {
@@ -149,13 +149,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1eGrwXzKRfKq",
-        "outputId": "a0f67b63-4d2d-4b39-9131-5f4ed91b741f"
+        "outputId": "05e27358-2346-4b05-9a28-bbf9237a476d"
       },
       "outputs": [
         {
@@ -173,13 +173,17 @@
         "# Function to ensure proper spacing around parentheses\n",
         "def fix_parentheses_spacing(text):\n",
         "    # Case 1: If '(' is preceded by '-', only add space after '('\n",
-        "    text = re.sub(r'-(\\()', r'- ( ', text)\n",
+        "    text = re.sub(r'-(\\()', r'- (', text)\n",
         "\n",
-        "    # Case 2: Otherwise, ensure spaces before and after '('\n",
-        "    text = re.sub(r'(?<!-)(\\S)\\(', r'\\1 ( ', text)\n",
+        "    # Case 2: Ensure spaces before and after '(' except when preceded by '-'\n",
+        "    text = re.sub(r'(?<!-)(\\S)\\(', r'\\1 ( ', text)  # Add space before '(' if not after '-'\n",
         "\n",
-        "    # Ensure space before and after ')'\n",
-        "    text = re.sub(r'\\)(\\S)', r' ) \\1', text)\n",
+        "    # Case 3: Ensure spaces before and after ')'\n",
+        "    text = re.sub(r'\\)(\\S)', r' ) \\1', text)  # Add space after ')'\n",
+        "    text = re.sub(r'(\\S)\\)', r'\\1 ) ', text)  # Add space before ')'\n",
+        "\n",
+        "    # Remove multiple spaces if any\n",
+        "    text = re.sub(r'\\s+', ' ', text).strip()\n",
         "\n",
         "    return text\n",
         "\n",
@@ -194,110 +198,154 @@
         "output_path = \"cleaned_file.xlsx\"\n",
         "df.to_excel(output_path, index=False)  # Use df.to_csv(\"cleaned_file.csv\", index=False) for CSV\n",
         "\n",
-        "print(f\"File saved as {output_path}\")"
+        "print(f\"File saved as {output_path}\")\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "eN3Rpcyd2WuR"
-      },
       "source": [
-        "Add space after word GRADE if not followed by \"-\" and if it is followed by \"-\" add space after hyphen\n"
-      ]
+        "Add space after word GRADE if not followed by \"-\" and if it is followed by \"-\" add space after hyphen"
+      ],
+      "metadata": {
+        "id": "O73A6jeHPW_s"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "source": [
+        "import pandas as pd\n",
+        "import re\n",
+        "\n",
+        "# Load Excel file\n",
+        "file_path = \"cleaned_file.xlsx\"  # Change this to your file path\n",
+        "df = pd.read_excel(file_path)\n",
+        "\n",
+        "# Function to modify PRODUCT DESCRIPTION\n",
+        "def modify_description(description):\n",
+        "    if pd.isna(description):  # Handle NaN values\n",
+        "        return description\n",
+        "\n",
+        "    # List of words to modify\n",
+        "    words_to_modify = [\"grade\", \"thickness\",\"width\",\"finish\",\"quality\"]\n",
+        "\n",
+        "    for word in words_to_modify:\n",
+        "        # Add space after 'word' if not followed by space, '-', or ':'\n",
+        "        description = re.sub(rf'(?i)\\b({word})(?=[A-Za-z0-9:])', r'\\1 ', description)\n",
+        "        # Ensure space after ':' or '-' only if they are just after 'word' without space\n",
+        "        description = re.sub(rf'(?i)\\b({word}):', r'\\1: ', description)\n",
+        "        description = re.sub(rf'(?i)\\b({word})-', r'\\1- ', description)\n",
+        "\n",
+        "    # Ensure space after every ':'\n",
+        "    description = re.sub(r':(?=[^\\s])', r': ', description)\n",
+        "\n",
+        "    return description\n",
+        "\n",
+        "# Apply function to PRODUCT DESCRIPTION column\n",
+        "df[\"PRODUCT DESCRIPTION\"] = df[\"PRODUCT DESCRIPTION\"].astype(str).apply(modify_description)\n",
+        "\n",
+        "# Save modified file\n",
+        "output_file = \"modified_file.xlsx\"\n",
+        "df.to_excel(output_file, index=False)\n",
+        "print(f\"Modified file saved as {output_file}\")"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xRhkJ6eM2TLx",
-        "outputId": "b5f2e6da-ad3c-4b11-c3da-03761583d200"
+        "id": "FywcjhiiL5ci",
+        "outputId": "18cde724-ced8-4d42-c818-d2155d5845c8"
       },
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Extraction completed! Results saved to output_dem.xlsx\n"
+            "Modified file saved as modified_file.xlsx\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "xRhkJ6eM2TLx"
+      },
+      "outputs": [],
       "source": [
-        "import pandas as pd\n",
-        "import json\n",
-        "import re\n",
+        "# import pandas as pd\n",
+        "# import json\n",
+        "# import re\n",
         "\n",
-        "# Load Excel file\n",
-        "file_path = \"modified_file.xlsx\"  # Update with your actual file path\n",
-        "df = pd.read_excel(file_path)\n",
+        "# # Load Excel file\n",
+        "# file_path = \"modified_file.xlsx\"  # Update with your actual file path\n",
+        "# df = pd.read_excel(file_path)\n",
         "\n",
-        "# Load grade and finish lists from JSON\n",
-        "with open(\"Grades_json.json\", \"r\") as f:\n",
-        "    grade_list = json.load(f)  # List of possible grades\n",
+        "# # Load grade and finish lists from JSON\n",
+        "# with open(\"Grades_json.json\", \"r\") as f:\n",
+        "#     grade_list = json.load(f)  # List of possible grades\n",
         "\n",
-        "with open(\"Finish_json.json\", \"r\") as f:\n",
-        "    finish_list = json.load(f)  # List of possible finishes\n",
+        "# with open(\"Finish_json.json\", \"r\") as f:\n",
+        "#     finish_list = json.load(f)  # List of possible finishes\n",
         "\n",
-        "# Function to check if description contains multiplication-like pattern\n",
-        "def contains_multiplication_pattern(description):\n",
-        "    pattern = r\"\\b\\d+[\\s*Xx×]\\d+[\\s*Xx×]*[A-Za-z]+\\b\"  # Match patterns like 0.3*445*C or 0.3X445XC\n",
-        "    return bool(re.search(pattern, str(description)))\n",
+        "# # Function to check if description contains multiplication-like pattern\n",
+        "# def contains_multiplication_pattern(description):\n",
+        "#     pattern = r\"\\b\\d+[\\s*Xx×]\\d+[\\s*Xx×]*[A-Za-z]+\\b\"  # Match patterns like 0.3*445*C or 0.3X445XC\n",
+        "#     return bool(re.search(pattern, str(description)))\n",
         "\n",
-        "# Function to extract the longest matching grade, searching in remaining text if multiplication pattern exists\n",
-        "def extract_grades(description, grade_list):\n",
-        "    description = str(description)\n",
-        "    if contains_multiplication_pattern(description):\n",
-        "        # Remove multiplication-like patterns before searching for grades\n",
-        "        description = re.sub(r\"\\b\\d+[\\s*Xx×]\\d+[\\s*Xx×]*[A-Za-z]+\\b\", \"\", description)\n",
+        "# # Function to extract the longest matching grade, searching in remaining text if multiplication pattern exists\n",
+        "# def extract_grades(description, grade_list):\n",
+        "#     description = str(description)\n",
+        "#     if contains_multiplication_pattern(description):\n",
+        "#         # Remove multiplication-like patterns before searching for grades\n",
+        "#         description = re.sub(r\"\\b\\d+[\\s*Xx×]\\d+[\\s*Xx×]*[A-Za-z]+\\b\", \"\", description)\n",
         "\n",
-        "    found_grades = []\n",
-        "    for grade in grade_list:\n",
-        "        pattern = rf\"\\b{re.escape(grade)}\\b\"  # Exact word match\n",
-        "        if re.search(pattern, description, re.IGNORECASE):\n",
-        "            found_grades.append(grade)\n",
+        "#     found_grades = []\n",
+        "#     for grade in grade_list:\n",
+        "#         pattern = rf\"\\b{re.escape(grade)}\\b\"  # Exact word match\n",
+        "#         if re.search(pattern, description, re.IGNORECASE):\n",
+        "#             found_grades.append(grade)\n",
         "\n",
-        "    return max(found_grades, key=len) if found_grades else \"Other\"  # Select longest match\n",
+        "#     return max(found_grades, key=len) if found_grades else \"Other\"  # Select longest match\n",
         "\n",
-        "# Function to extract the first occurrence of finish\n",
-        "def extract_finish(description, finish_list):\n",
-        "    description = str(description)\n",
+        "# # Function to extract the first occurrence of finish\n",
+        "# def extract_finish(description, finish_list):\n",
+        "#     description = str(description)\n",
         "\n",
-        "    # Check for explicit \"FINISH : X\" pattern first\n",
-        "    match = re.search(r\"FINISH\\s*:\\s*(\\d+)\", description, re.IGNORECASE)\n",
-        "    if match:\n",
-        "        return f\"N{match.group(1)}\"  # Convert \"FINISH : 4\" to \"N4\"\n",
+        "#     # Check for explicit \"FINISH : X\" pattern first\n",
+        "#     match = re.search(r\"FINISH\\s*:\\s*(\\d+)\", description, re.IGNORECASE)\n",
+        "#     if match:\n",
+        "#         return f\"N{match.group(1)}\"  # Convert \"FINISH : 4\" to \"N4\"\n",
         "\n",
-        "    # Check for \"no.x\" pattern (case insensitive, ensuring it's not followed by another digit)\n",
-        "    match = re.search(r'[nN][oO]\\.(\\d)(?!\\d)', description, re.IGNORECASE)\n",
-        "    if match:\n",
-        "        return f\"N{match.group(1)}\"  # Convert \"no.4\" to \"N4\"\n",
+        "#     # Check for \"no.x\" pattern (case insensitive, ensuring it's not followed by another digit)\n",
+        "#     match = re.search(r'[nN][oO]\\.(\\d)(?!\\d)', description, re.IGNORECASE)\n",
+        "#     if match:\n",
+        "#         return f\"N{match.group(1)}\"  # Convert \"no.4\" to \"N4\"\n",
         "\n",
-        "    # Otherwise, check the predefined finish list\n",
-        "    for finish in finish_list:\n",
-        "        pattern = rf\"\\b{re.escape(finish)}\\b\"  # Exact word match\n",
-        "        if re.search(pattern, description, re.IGNORECASE):\n",
-        "            return finish\n",
+        "#     # Otherwise, check the predefined finish list\n",
+        "#     for finish in finish_list:\n",
+        "#         pattern = rf\"\\b{re.escape(finish)}\\b\"  # Exact word match\n",
+        "#         if re.search(pattern, description, re.IGNORECASE):\n",
+        "#             return finish\n",
         "\n",
-        "    return \"?\"  # Add '?' if no finish is found\n",
+        "#     return \"?\"  # Add '?' if no finish is found\n",
         "\n",
-        "# Function to extract quality\n",
-        "def extract_quality(description):\n",
-        "    match = re.search(r'\\b(Prime|Stock|Second)\\b', str(description), re.IGNORECASE)\n",
-        "    return match.group(1) if match else '?'  # Returns '?' if no match is found\n",
+        "# # Function to extract quality\n",
+        "# def extract_quality(description):\n",
+        "#     match = re.search(r'\\b(Prime|Stock|Second)\\b', str(description), re.IGNORECASE)\n",
+        "#     return match.group(1) if match else '?'  # Returns '?' if no match is found\n",
         "\n",
-        "# Ensure columns exist in DataFrame before updating\n",
-        "df[\"Grade\"] = df[\"PRODUCT DESCRIPTION\"].apply(lambda x: extract_grades(x, grade_list))\n",
-        "df[\"Finish\"] = df[\"PRODUCT DESCRIPTION\"].apply(lambda x: extract_finish(x, finish_list))\n",
-        "df[\"Quality\"] = df[\"PRODUCT DESCRIPTION\"].apply(lambda x: extract_quality(x))\n",
+        "# # Ensure columns exist in DataFrame before updating\n",
+        "# df[\"Grade\"] = df[\"PRODUCT DESCRIPTION\"].apply(lambda x: extract_grades(x, grade_list))\n",
+        "# df[\"Finish\"] = df[\"PRODUCT DESCRIPTION\"].apply(lambda x: extract_finish(x, finish_list))\n",
+        "# df[\"Quality\"] = df[\"PRODUCT DESCRIPTION\"].apply(lambda x: extract_quality(x))\n",
         "\n",
-        "# Save the updated DataFrame to a new Excel file\n",
-        "output_file = \"output_dem.xlsx\"\n",
-        "df.to_excel(output_file, index=False)\n",
+        "# # Save the updated DataFrame to a new Excel file\n",
+        "# output_file = \"output_dem.xlsx\"\n",
+        "# df.to_excel(output_file, index=False)\n",
         "\n",
-        "print(f\"Extraction completed! Results saved to {output_file}\")\n"
+        "# print(f\"Extraction completed! Results saved to {output_file}\")\n"
       ]
     },
     {
@@ -311,13 +359,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mBN3QqrAk0BJ",
-        "outputId": "cb430efa-0e26-487a-be7f-18cf61938397"
+        "outputId": "8c7b4662-18db-40fb-8e27-e0c9d6e02f52"
       },
       "outputs": [
         {
@@ -395,13 +443,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d9eSTOeXkX_M",
-        "outputId": "0f7fbed9-e6ce-4730-dd37-e88c0ee1d319"
+        "outputId": "de8c0bc5-2577-4c7f-b83c-afa653a0864b"
       },
       "outputs": [
         {
@@ -520,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 8,
       "metadata": {
         "id": "Byd4jqKsq4iM"
       },
@@ -533,7 +581,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyPOa0HNKqFtG55uzbe0eNUc",
+      "authorship_tag": "ABX9TyNdOG3JDOb9NGkuN03IZgJ/",
       "include_colab_link": true
     },
     "kernelspec": {
