--- a/Import_data_cleaning.ipynb
+++ b/Import_data_cleaning.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7uh1pxGTrXuU",
-        "outputId": "ce3ef815-34f3-4285-b3d6-5183e6615a11"
+        "outputId": "f36beedc-97da-4871-c8cd-f7ae52807367"
       },
       "outputs": [
         {
@@ -81,13 +81,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "n5aJ40_TPE5r",
-        "outputId": "9c42e0fe-44d3-455b-a3c3-b1ec0e692217"
+        "outputId": "d92aac0e-5907-4b6c-b737-717d3841e1d1"
       },
       "outputs": [
         {
@@ -149,56 +149,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1eGrwXzKRfKq",
-        "outputId": "80d3f248-b787-46b9-b49b-18fe5c0adbb8"
+        "outputId": "a60d68cc-f7e0-44bf-ae67-547b5d90a598"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "File saved as cleaned_file.xlsx\n"
+            "Formatting complete. Saved as 'formatted_file.xlsx'.\n"
           ]
         }
       ],
       "source": [
+        "# import pandas as pd\n",
+        "# import re\n",
+        "\n",
+        "# # Function to ensure proper spacing around parentheses\n",
+        "# def fix_parentheses_spacing(text):\n",
+        "#     # Case 1: If '(' is preceded by '-', only add space after '('\n",
+        "#     text = re.sub(r'-(\\()', r'- (', text)\n",
+        "\n",
+        "#     # Case 2: Ensure spaces before and after '(' except when preceded by '-'\n",
+        "#     text = re.sub(r'(?<!-)(\\S)\\(', r'\\1 ( ', text)  # Add space before '(' if not after '-'\n",
+        "\n",
+        "#     # Case 3: Ensure spaces before and after ')'\n",
+        "#     text = re.sub(r'\\)(\\S)', r' ) \\1', text)  # Add space after ')'\n",
+        "#     text = re.sub(r'(\\S)\\)', r'\\1 ) ', text)  # Add space before ')'\n",
+        "\n",
+        "#     # Remove multiple spaces if any\n",
+        "#     text = re.sub(r'\\s+', ' ', text).strip()\n",
+        "\n",
+        "#     return text\n",
+        "\n",
+        "# # Load data\n",
+        "# file_path = \"Import_Data Analytics_cleaned_cleaned.xlsx\"  # Change to your actual file path\n",
+        "# df = pd.read_excel(file_path)  # Use pd.read_csv(file_path) for CSV\n",
+        "\n",
+        "# # Apply transformation to \"PRODUCT DESCRIPTION\"\n",
+        "# df[\"PRODUCT DESCRIPTION\"] = df[\"PRODUCT DESCRIPTION\"].astype(str).apply(fix_parentheses_spacing)\n",
+        "\n",
+        "# # Save the modified file\n",
+        "# output_path = \"cleaned_file.xlsx\"\n",
+        "# df.to_excel(output_path, index=False)  # Use df.to_csv(\"cleaned_file.csv\", index=False) for CSV\n",
+        "\n",
+        "# print(f\"File saved as {output_path}\")\n",
+        "\n",
+        "\n",
         "import pandas as pd\n",
         "import re\n",
         "\n",
-        "# Function to ensure proper spacing around parentheses\n",
-        "def fix_parentheses_spacing(text):\n",
-        "    # Case 1: If '(' is preceded by '-', only add space after '('\n",
-        "    text = re.sub(r'-(\\()', r'- (', text)\n",
+        "# Function to add spaces before and after parentheses, but not for \"-(\"\n",
+        "def format_description(text):\n",
+        "    return re.sub(r'(?<!-)(\\()|(\\))(?!\\))', r' \\1\\2 ', text).strip()\n",
         "\n",
-        "    # Case 2: Ensure spaces before and after '(' except when preceded by '-'\n",
-        "    text = re.sub(r'(?<!-)(\\S)\\(', r'\\1 ( ', text)  # Add space before '(' if not after '-'\n",
+        "# Load your Excel file\n",
+        "file_path = \"Import_Data Analytics_cleaned.xlsx\"  # Change this to your file path\n",
+        "df = pd.read_excel(file_path)\n",
         "\n",
-        "    # Case 3: Ensure spaces before and after ')'\n",
-        "    text = re.sub(r'\\)(\\S)', r' ) \\1', text)  # Add space after ')'\n",
-        "    text = re.sub(r'(\\S)\\)', r'\\1 ) ', text)  # Add space before ')'\n",
-        "\n",
-        "    # Remove multiple spaces if any\n",
-        "    text = re.sub(r'\\s+', ' ', text).strip()\n",
-        "\n",
-        "    return text\n",
-        "\n",
-        "# Load data\n",
-        "file_path = \"Import_Data Analytics_cleaned_cleaned.xlsx\"  # Change to your actual file path\n",
-        "df = pd.read_excel(file_path)  # Use pd.read_csv(file_path) for CSV\n",
-        "\n",
-        "# Apply transformation to \"PRODUCT DESCRIPTION\"\n",
-        "df[\"PRODUCT DESCRIPTION\"] = df[\"PRODUCT DESCRIPTION\"].astype(str).apply(fix_parentheses_spacing)\n",
+        "# Apply transformation to the \"PRODUCT DESCRIPTION\" column\n",
+        "df[\"PRODUCT DESCRIPTION\"] = df[\"PRODUCT DESCRIPTION\"].astype(str).apply(format_description)\n",
         "\n",
         "# Save the modified file\n",
-        "output_path = \"cleaned_file.xlsx\"\n",
-        "df.to_excel(output_path, index=False)  # Use df.to_csv(\"cleaned_file.csv\", index=False) for CSV\n",
+        "df.to_excel(\"cleaned_file.xlsx\", index=False)\n",
         "\n",
-        "print(f\"File saved as {output_path}\")\n"
+        "print(\"Formatting complete. Saved as 'formatted_file.xlsx'.\")\n"
       ]
     },
     {
@@ -226,7 +246,7 @@
         "        return description\n",
         "\n",
         "    # List of words to modify\n",
-        "    words_to_modify = [\"grade\", \"thickness\",\"width\",\"finish\",\"quality\"]\n",
+        "    words_to_modify = [\"grade\", \"thickness\",\"width\",\"finish\",\"quality\",\"is 6911\"]\n",
         "\n",
         "    for word in words_to_modify:\n",
         "        # Add space after 'word' if not followed by space, '-', or ':'\n",
@@ -253,9 +273,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FywcjhiiL5ci",
-        "outputId": "156c9433-99ef-46eb-e7e2-169b1d82b12c"
+        "outputId": "62eda2a6-5eb1-4527-eebe-0e6538941de3"
       },
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,13 +297,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mBN3QqrAk0BJ",
-        "outputId": "c3d4901b-1487-432d-eff4-7d29f8ee4860"
+        "outputId": "d7cd689f-cede-4d44-bd4e-3fd2bf484a7c"
       },
       "outputs": [
         {
@@ -361,13 +381,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d9eSTOeXkX_M",
-        "outputId": "da37799c-09f0-45d3-9573-1cc93fafa502"
+        "outputId": "4247f0cd-cefb-4da2-b74f-b9fbf8e96918"
       },
       "outputs": [
         {
@@ -388,79 +408,91 @@
         "    thickness = None\n",
         "    width = None\n",
         "\n",
-        "    # Case with explicitly labeled THICKNESS and WIDTH inside parentheses\n",
-        "    explicit_pattern = r'\\(\\s*THICKNESS\\s*[:\\-]?\\s*(\\d+\\.?\\d*)\\s*MM\\s*\\)\\s*\\(\\s*WIDTH\\s*[:\\-]?\\s*(\\d+\\.?\\d*)\\s*MM\\s*\\)'\n",
+        "    # Case with explicitly labeled thickness variations (THICKNESS, THICK, THK) and WIDTH inside parentheses\n",
+        "    explicit_pattern = r'\\(\\s*(?:THICKNESS|THICK|THK)\\s*[:\\-]?\\s*(\\d+\\.?\\d*)\\s*MM\\s*\\)\\s*\\(\\s*WIDTH\\s*[:\\-]?\\s*(\\d+\\.?\\d*)\\s*MM\\s*\\)'\n",
         "    explicit_match = re.search(explicit_pattern, description)\n",
         "\n",
         "    if explicit_match:\n",
         "        thickness = float(explicit_match.group(1))\n",
         "        width = float(explicit_match.group(2))\n",
         "    else:\n",
-        "        # New Case: \"THICKNESS : 0.60MM WIDTH : 1240MM\"\n",
-        "        new_pattern = r'THICKNESS\\s*[:\\-]?\\s*(\\d+(\\.\\d+)?)\\s*MM\\s*WIDTH\\s*[:\\-]?\\s*(\\d+(\\.\\d+)?)\\s*MM'\n",
+        "        # New Case: \"THICKNESS : 0.60MM WIDTH : 1240MM\" with variations\n",
+        "        new_pattern = r'(?:THICKNESS|THICK|THK)\\s*[:\\-]?\\s*(\\d+(\\.\\d+)?)\\s*MM\\s*WIDTH\\s*[:\\-]?\\s*(\\d+(\\.\\d+)?)\\s*MM'\n",
         "        new_match = re.search(new_pattern, description)\n",
         "\n",
         "        if new_match:\n",
         "            thickness = float(new_match.group(1))\n",
         "            width = float(new_match.group(3))\n",
         "        else:\n",
-        "            # Case with \"T\" notation\n",
-        "            primary_pattern = r'(\\d+(\\.\\d+)?)\\s*T\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM(?:[*Xx]?(\\d+(\\.\\d+)?)\\s*MM)?'\n",
+        "            # Case with \"T\" and \"W\" notation\n",
+        "            primary_pattern = r'(\\d+(\\.\\d+)?)\\s*T\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM[Xx](\\d+(\\.\\d+)?)\\s*MM'\n",
         "            match = re.search(primary_pattern, description)\n",
         "\n",
         "            if match:\n",
         "                thickness = float(match.group(1))\n",
-        "                width = float(match.group(3)) if match.lastindex and match.lastindex >= 3 else None\n",
+        "                width = float(match.group(3))\n",
         "            else:\n",
-        "                # Handle explicitly labeled \"THICKNESS\" and \"WIDTH\" without parentheses\n",
-        "                labeled_pattern = r'THICKNESS[-:\\s]*(\\d+(\\.\\d+)?)\\s*MM\\s*[Xx]\\s*WIDTH[-:\\s]*(\\d+(\\.\\d+)?)\\s*MM'\n",
+        "                # Handle explicitly labeled variations\n",
+        "                labeled_pattern = r'(?:THICKNESS|THICK|THK)[-:\\s]*(\\d+(\\.\\d+)?)\\s*MM\\s*[Xx]\\s*WIDTH[-:\\s]*(\\d+(\\.\\d+)?)\\s*MM'\n",
         "                labeled_match = re.search(labeled_pattern, description)\n",
         "\n",
         "                if labeled_match:\n",
         "                    thickness = float(labeled_match.group(1))\n",
         "                    width = float(labeled_match.group(3))\n",
         "                else:\n",
-        "                    # Case with ranges like \"0.395-0.488 MM X 130-200 MM\"\n",
-        "                    range_pattern = r'(\\d+(\\.\\d+)?)-(\\d+(\\.\\d+)?)\\s*MM\\s*[Xx]\\s*(\\d+(\\.\\d+)?)-(\\d+(\\.\\d+)?)\\s*MM'\n",
-        "                    range_match = re.search(range_pattern, description)\n",
+        "                    # Case with dimensions inside parentheses\n",
+        "                    parenthesis_pattern = r'\\((\\d+(\\.\\d+)?)T[Xx](\\d+(\\.\\d+)?)MM[Xx](\\d+(\\.\\d+)?)MM\\)'\n",
+        "                    parenthesis_match = re.search(parenthesis_pattern, description)\n",
         "\n",
-        "                    if range_match:\n",
-        "                        thickness = f\"{range_match.group(1)}-{range_match.group(3)}\"\n",
-        "                        width = f\"{range_match.group(5)}-{range_match.group(7)}\"\n",
+        "                    if parenthesis_match:\n",
+        "                        thickness = float(parenthesis_match.group(1))\n",
+        "                        width = float(parenthesis_match.group(3))\n",
         "                    else:\n",
-        "                        # Pattern for cases like \"0.3*445*C\"\n",
-        "                        asterisk_pattern = r'(\\d+(\\.\\d+)?)\\s*[*Xx]\\s*(\\d+(\\.\\d+)?)\\s*[*Xx]?\\s*\\w*'\n",
-        "                        asterisk_match = re.search(asterisk_pattern, description)\n",
+        "                        # Handle WIDTH ABOVE XXX and WIDTH BELOW XXX\n",
+        "                        width_above_pattern = r'WIDTH\\s*ABOVE\\s*(\\d+(\\.\\d+)?)'\n",
+        "                        width_below_pattern = r'WIDTH\\s*BELOW\\s*(\\d+(\\.\\d+)?)'\n",
         "\n",
-        "                        if asterisk_match:\n",
-        "                            thickness = float(asterisk_match.group(1))\n",
-        "                            width = float(asterisk_match.group(3))\n",
+        "                        width_above_match = re.search(width_above_pattern, description)\n",
+        "                        width_below_match = re.search(width_below_pattern, description)\n",
+        "\n",
+        "                        if width_above_match:\n",
+        "                            width = f\">{width_above_match.group(1)}\"\n",
+        "                        elif width_below_match:\n",
+        "                            width = f\"<{width_below_match.group(1)}\"\n",
         "                        else:\n",
-        "                            # Other common patterns\n",
-        "                            patterns = [\n",
-        "                                r'THICKNESS[-:\\s]*(\\d+(\\.\\d+)?)',\n",
-        "                                r'WIDTH[:\\s-]*(\\d+(\\.\\d+)?)\\s*MM',\n",
-        "                                r'THICK(?:NESS)?[:\\s-]*(\\d+(\\.\\d+)?)\\s*MM',\n",
-        "                                r'(\\d+(\\.\\d+)?)\\s*MM\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
-        "                                r'(\\d+(\\.\\d+)?)\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
-        "                                r'SIZE.*?(\\d+(\\.\\d+)?)\\s*MM\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
-        "                                r'(\\d+(\\.\\d+)?)\\s*MM\\s*X\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
-        "                            ]\n",
+        "                            # Special case for 0.5TX366.0WX1122.0L format\n",
+        "                            special_pattern = r'(\\d+(\\.\\d+)?)T[Xx](\\d+(\\.\\d+)?)W[Xx](\\d+(\\.\\d+)?)L'\n",
+        "                            special_match = re.search(special_pattern, description)\n",
         "\n",
-        "                            for pattern in patterns:\n",
-        "                                match = re.search(pattern, description)\n",
-        "                                if match:\n",
-        "                                    if \"THICKNESS\" in pattern and \"WIDTH\" in pattern:\n",
-        "                                        thickness = float(match.group(1))\n",
-        "                                        width = float(match.group(3))\n",
-        "                                    elif \"THICKNESS\" in pattern:\n",
-        "                                        thickness = float(match.group(1))\n",
-        "                                    elif \"WIDTH\" in pattern:\n",
-        "                                        width = float(match.group(1))\n",
-        "                                    else:\n",
-        "                                        thickness = float(match.group(1))\n",
-        "                                        width = float(match.group(3)) if match.lastindex and match.lastindex >= 3 else None\n",
-        "                                    break  # Stop after first valid match\n",
+        "                            if special_match:\n",
+        "                                thickness = float(special_match.group(1))\n",
+        "                                width = float(special_match.group(3))\n",
+        "                            else:\n",
+        "                                # Additional case: \"THICK 0.38X620MM\"\n",
+        "                                thick_width_pattern = r'(?:THICKNESS|THICK|THK)\\s*(\\d+(\\.\\d+)?)\\s*[Xx]\\s*(\\d+(\\.\\d+)?)\\s*MM'\n",
+        "                                thick_width_match = re.search(thick_width_pattern, description)\n",
+        "\n",
+        "                                if thick_width_match:\n",
+        "                                    thickness = float(thick_width_match.group(1))\n",
+        "                                    width = float(thick_width_match.group(3))\n",
+        "                                else:\n",
+        "                                    # Other common patterns\n",
+        "                                    patterns = [\n",
+        "                                        r'(?:THICKNESS|THICK|THK)[-:\\s]*(\\d+(\\.\\d+)?)',\n",
+        "                                        r'WIDTH[:\\s-]*(\\d+(\\.\\d+)?)\\s*MM',\n",
+        "                                        r'THICK(?:NESS|)[-:\\s]*(\\d+(\\.\\d+)?)\\s*MM',\n",
+        "                                        r'(\\d+(\\.\\d+)?)\\s*MM\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
+        "                                        r'(\\d+(\\.\\d+)?)\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
+        "                                        r'SIZE.*?(\\d+(\\.\\d+)?)\\s*MM\\s*[*Xx]?\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
+        "                                        r'(\\d+(\\.\\d+)?)\\s*MM\\s*X\\s*(\\d+(\\.\\d+)?)\\s*MM',\n",
+        "                                    ]\n",
+        "\n",
+        "                                    for pattern in patterns:\n",
+        "                                        match = re.search(pattern, description)\n",
+        "                                        if match:\n",
+        "                                            thickness = float(match.group(1))\n",
+        "                                            width = float(match.group(3)) if match.lastindex and match.lastindex >= 3 else None\n",
+        "                                            break  # Stop after first valid match\n",
         "\n",
         "    # Format values for consistency\n",
         "    if thickness and isinstance(thickness, float):\n",
@@ -486,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "Byd4jqKsq4iM"
       },
@@ -499,7 +531,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyJzLFCWwlFWcIeiijkpVW",
+      "authorship_tag": "ABX9TyNMr2kRhBT5agZq2/mZsasL",
       "include_colab_link": true
     },
     "kernelspec": {
